--- a/templates/article/edit.html.twig
+++ b/templates/article/edit.html.twig
@@ -7,6 +7,11 @@
     <a class="btn btn-info" href="{{ path('article.index')}}"><i class="fas fa-clipboard-list">&nbsp;</i>Retour Liste des articles</a>
 </div>
 <div class="container mt-4">
+    {% for message in app.flashes('error') %}
+        <div class="alert alert-danger">
+            {{ message }}
+        </div>
+    {% endfor %}
     <h3>Modifier l'article <small class="text-muted">`{{ article.title }}`</small></h3>
     {{ form_start(form) }}
     <div class="row">
@@ -17,8 +22,24 @@
         <div class="col-md-auto">{{ form_row(form.content) }}</div>
     </div>
     <div class="row">
-        <div class="col-md-4">{{ form_row(form.categories) }}</div>
-        <div class="col-md-4">{{ form_row(form.isPublished) }}</div>
+        <div class="col-md-2">{{ form_row(form.categories) }}</div>
+        <div class="col-md-2">{{ form_row(form.isPublished) }}</div>
+        <div class="col-md-3">
+            {% if form.vars.value.ImageFilename is not null %}
+                {{ form_widget(form.Image, { 'attr': {'placeholder': 'Image N°1'} }) }}
+                <img src="{{ asset('uploads/images/' ~ form.vars.value.ImageFilename) }}" class="w150" />
+            {% else %}
+                {{ form_widget(form.Image) }}
+            {% endif %}
+        </div>
+        <div class="col-md-3">
+            {% if form.vars.value.Image2Filename is not null %}
+                {{ form_widget(form.Image2, { 'attr': {'placeholder': 'Image N°2'} }) }}
+                <img src="{{ asset('uploads/images/' ~ form.vars.value.Image2Filename) }}" class="w150" />
+            {% else %}
+                {{ form_widget(form.Image2) }}
+            {% endif %}
+        </div>
     </div>
     <div class="row">
         <div class="col-md-auto">
