--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -38,8 +38,10 @@
         <aside class="col-12 col-md-3 p-2">
             <nav class="navbar navbar-expand navbar-dark bg-white flex-md-column flex-row align-items-start">
                 <div class="collapse navbar-collapse">
+                    
                     <ul class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
                         <li class="nav-item text-left">
+                            <a href="{{ path('event_calendar') }}"><i class="fas fa-calendar-alt">&nbsp;</i>Calendrier du Club</a><br/><br/>
                             <h5>Prochains Interclubs<br/></h5>
                             <div class="row">
                                 <div class="col-md-2" id="cercle">1</div>
