--- a/public/style.css
+++ b/public/style.css
@@ -56,7 +56,7 @@ tr.femme {
     font-size: 14px;
 }
 
-.col-md-auto.interclub span {
+.col.interclub span {
     background: #e1ecee;
     line-height: 50px;
     vertical-align: text-bottom;
@@ -69,14 +69,21 @@ tr.femme {
     border-radius: 20px;
     background: #084a57;
     color: white;
-    text-align: left;
+    text-align: center;
     line-height: 40px;
     margin: 5px;
     font-size: 18px;
+    max-width: 40px;
 }
 
 .interclub {
     list-style-type:none!important;
+    vertical-align: middle;
+}
+
+.col.petit {
+    padding-right: 0px;
+    padding-left: 22px;
 }
 
 .table-smallfont td {
@@ -167,8 +174,8 @@ img.w150 {
 	height: auto;
 }
 
-img.w375 {
-	max-width: 375px;
+img.w315 {
+	max-width: 315px;
 	height: auto;
 }
 
@@ -363,3 +370,97 @@ section .section-title {
     color: white;
 }
 /* Fin Superposition Image et Texte */
+
+/* Navigation animée CSS */
+
+.animated-icon3 {
+    width: 30px;
+    height: 20px;
+    position: relative;
+    margin: 0px;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    cursor: pointer;
+}
+
+.animated-icon3 span {
+    display: block;
+    position: absolute;
+    height: 3px;
+    width: 100%;
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
+}
+
+.animated-icon3 span {
+    background: #e4eef0;
+}
+    
+.animated-icon3 span:nth-child(1) {
+    top: 0px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center;
+    }
+    
+.animated-icon3 span:nth-child(2) {
+    top: 10px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center;
+    }
+    
+.animated-icon3 span:nth-child(3) {
+    top: 20px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center;
+}
+
+.open {
+    background-color: #084a57;
+    text-align: center;
+}
+
+.animated-icon3.open span:nth-child(1) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+    top: 0px;
+    left: 4px;
+}
+    
+.animated-icon3.open span:nth-child(2) {
+    width: 0%;
+    opacity: 0;
+}
+    
+.animated-icon3.open span:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    top: 21px;
+    left: 4px;
+}
+
+/* Fin Animation CSS */
