--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
+    <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>{% block title %}BACV78{% endblock %}</title>
         <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
@@ -102,7 +102,7 @@
         <!-- Footer -->
         <section id="footer">
             <div class="container">
-                <div class="row align-items-center">
+                <div class="row petit text-center text-xs-center text-sm-left text-md-left">
                     <div class="col-sm-auto">
                         <h4>Nos Sponsors</h4>
                     </div>
