--- a/templates/tournoi/index.html.twig
+++ b/templates/tournoi/index.html.twig
@@ -33,7 +33,7 @@
             <div class="col-sm soon">
                 Tournoi avec inscriptions closes
             </div>
-            <div class="col-sm open">
+            <div class="col-sm ouvert">
                 Tournoi à venir
             </div>
         </div>
